# fermentation-sensor-system

./: README.md
client/: SensorProject  logger.py  main.py  sensor_cacao.ino  sensor_controller_example.py  service
client/data/: 2025-10-13
server/: 2025-10-12  2025-10-13  Cargo.toml  test.csv
server/data/: 2025-10-12.csv  2025-10-13.csv  2025-10-14.csv  2025-10-15.csv  gaspar_2025-10-13.csv
server/public/: index.html
server/src/: main.rs
